--- a/actividades.html
+++ b/actividades.html
@@ -2,29 +2,41 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- LINK BOOTSTRAP -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- FIN LINK BOOTSTRAP -->
+    <!-- LINK CDNJ FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- FIN LINK CDNJ FONT AWESOME -->
     <title>Actividades</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="shortcut icon" href="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png">
+    <link rel="stylesheet" href="estilos.css" />
+    <link rel="shortcut icon" href="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" />
 </head>
 
 <body>
+    <!-- NAVEGACION INICIO -->
     <header>
-        <div class="logo">
-            <a href="./index.html" class="logo"> ALTRENO <span>POINT</span></a>
-        </div>
-
-        <nav class="barra">
-            <ul>
-                <li><a href="./nosotros.html">INICIO</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
+            </a>
+            <div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">INICIO</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
+    <!-- NAVEGACION FIN -->
+
 
     <main>
         
@@ -75,5 +87,18 @@
             </div>
             <p class="redes">Todos los derechos son reservados por copyright</p>
         </footer>
+
+    <!-- SEPARATE BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+    </script>
+    <!-- FIN SEPARATE BOOTSTRAP -->
+        
 </body>
 </html>
