--- a/nosotros.html
+++ b/nosotros.html
@@ -20,24 +20,42 @@
 </head>
 
 <body>
-    <!-- HEADER INICIO -->
+    <!-- NAVEGACION INICIO -->
     <header>
-        <div class="logo">
-            <a href="./index.html" class="logo"> ALTRENO <span>POINT</span></a>
-        </div>
-
-        <nav class="barra">
-            <ul>
-                <li><a href="#ancla0">INICIO</a></li>
-                <li><a href="#anclax">PLANES</a></li>
-                <li><a href="#ancla2">PROPUESTA</a></li>
-                <li><a href="#ancla3">NATACION</a></li>
-                <li><a href="#ancla4">METODO</a></li>
-                <li><a href="#ancla1">UBICACION</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
+            </a>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <i class="fa-solid fa-bars-staggered"></i>
+            </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ancla0">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#anclax">PLANES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ancla2">PROPUESTA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ancla3">NATACION</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ancla4">METODO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ancla1">UBICACION</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <!-- HEADER FIN -->
+    <!-- NAVECACION FIN -->
     <main>
         <!-- INICIO SITIO -->
         <section class="cont1" id="ancla0">
@@ -149,7 +167,7 @@
         <!-- METODO -->
         <h2 class="sec3" id="ancla4">METODO</h2>
         <section class="cont10">
-        <section class="galeria">
+            <section class="galeria">
                 <!-- CAROUSEL BOOTSTRAP -->
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -192,8 +210,8 @@
                     </button>
                 </div>
                 <!--FIN CAROUSEL BOOTSTRAP -->
-            </div>
-        </section>
+                </div>
+            </section>
         </section>
         <!-- FIN METODO -->
 
