--- a/contacto.html
+++ b/contacto.html
@@ -36,11 +36,9 @@
         </nav>
     </header>
     <!-- NAVEGACION FIN -->
-
-    <section class="cont5">
+<main class="cont5">
         <div class="item4">
             <p class="texto4"><strong>FORMULARIO DE <br> PRE-INSCRIPCIÓN</strong>
-
                 <form action="" class="item5">
                     <input name="nombre" type="text" placeholder="Nombre"><br>
 
@@ -68,9 +66,8 @@
 
                     <input type="submit">
                 </form>
-        </div>
-
-    </section>
+            </div>
+</main>
     <footer>
         <div class="redes">
             <a href="https://www.facebook.com/Altreno.point/"><i class="fa-brands fa-facebook"></i></a>
