--- a/natacion.html
+++ b/natacion.html
@@ -36,14 +36,18 @@
     </nav>
 </header>
 <!-- NAVEGACION FIN -->
-
-
-    <section class="cont8">
-        <div class="item8">
-            <p class="texto8">PROXIMAMENTE...</p>
-        </div>
-    </section>
-
+<!-- INICIO GALERIA GRID -->
+    <div class="altrenoswim">
+        <div class="foto1 foto"></div>
+        <div class="foto2 foto"></div>
+        <div class="foto3 foto"></div>
+        <div class="foto4 foto"></div>
+        <div class="foto5 foto"></div>
+        <div class="foto6 foto"></div>
+        <div class="foto7 foto"></div>
+        <div class="foto8 foto"></div>
+    </div>
+<!-- FIN GALERIA GRID -->
     <footer>
         <div class="redes">
             <a href="https://www.facebook.com/Altreno.point/"><i class="fa-brands fa-facebook"></i></a>
