--- a/contacto.html
+++ b/contacto.html
@@ -21,21 +21,35 @@
 
 <body>
     <!-- NAVEGACION INICIO -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="./index.html">
-                <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
-            </a>
-            <div>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./nosotros.html">INICIO</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <!-- NAVEGACION FIN -->
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="./index.html">
+            <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
+        </a>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <i class="fa-solid fa-bars-staggered"></i>
+        </button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link navegacion" href="./nosotros.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navegacion" href="./contacto.html">INSCRIPCION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navegacion" href="./natacion.html">ALTRENO-SWIM</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navegacion" href="./actividades.html">ACTIVIDADES</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+<!-- NAVECACION FIN -->
 <main class="cont5">
         <div class="item4">
             <p class="texto4"><strong>FORMULARIO DE <br> PRE-INSCRIPCIÓN</strong>
