nav bar nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -33,29 +33,32 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
+                    <div class="dropdown">
+                        <button type="button" class="btn navegacion dropdown-toggle" data-toggle="dropdown">
+                            INICIO
+                        </button>
+                        <div class="dropdown-menu desplegable">
+                            <a class="dropdown-item" href="./nosotros.html">NOSOTROS</a>
+                            <a class="dropdown-item" href="#anclax">PLANES</a>
+                            <a class="dropdown-item" href="#ancla2">PROPUESTA</a>
+                            <a class="dropdown-item" href="#ancla3">NATACION</a>
+                            <a class="dropdown-item" href="#ancla1">UBICACION</a>
+                            <a class="dropdown-item" href="#ancla4">METODO</a>
+                        </div>
+                    </div>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ancla0">INICIO</a>
+                        <a class="nav-link navegacion" href="./contacto.html">INSCRIPCION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#anclax">PLANES</a>
+                        <a class="nav-link navegacion" href="./natacion.html">ALTRENO-SWIM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ancla2">PROPUESTA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ancla3">NATACION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ancla4">METODO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ancla1">UBICACION</a>
+                        <a class="nav-link navegacion" href="./actividades.html">ACTIVIDADES</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <!-- NAVECACION FIN -->
     <main>
         <!-- INICIO SITIO -->
         <section class="cont1" id="ancla0">
