--- a/actividades.html
+++ b/actividades.html
@@ -20,76 +20,94 @@
 </head>
 
 <body>
-<!-- NAVEGACION INICIO -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="./index.html">
-            <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
-        </a>
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <i class="fa-solid fa-bars-staggered"></i>
-        </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link navegacion" href="./nosotros.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navegacion" href="./contacto.html">INSCRIPCION</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navegacion" href="./natacion.html">ALTRENO-SWIM</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navegacion" href="./actividades.html">ACTIVIDADES</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
-<!-- NAVECACION FIN -->
+    <!-- NAVEGACION INICIO -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
+            </a>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <i class="fa-solid fa-bars-staggered"></i>
+            </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link navegacion" href="./nosotros.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navegacion" href="./contacto.html">INSCRIPCION</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navegacion" href="./natacion.html">ALTRENO-SWIM</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navegacion" href="./actividades.html">ACTIVIDADES</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- NAVECACION FIN -->
 
 
-<section class="cont6">
+    <section class="cont6">
         <div class="conteiner-fluid item6">
             <aside class="col-md-6 col-sm-12">
-                    <h4>FUNCIONAL</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/eYU6z5cydv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                <aside class="col-md-6 col-sm-12">
-                    <h4>SPINNING</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/V20a2EGLVBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                <aside class="col-md-6 col-sm-12">
-                    <h4>BOXEO</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/i_LHzvxH-Pk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                <aside class="col-md-6 col-sm-12">
-                    <h4>G.A.P</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/z67ey1vTQ48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                    <aside class="col-md-6 col-sm-12">
-                    <h4>ZUMBA</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/r09zk5mp_Nk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                    <aside class="col-md-6 col-sm-12">
-                    <h4>PILATES</h4>
-                    <iframe class="video-act" src="https://www.youtube.com/embed/xlRHaxIv7FE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </aside>
-                    </div>
-                </section>
+                <h4>FUNCIONAL</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/eYU6z5cydv0" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+            <aside class="col-md-6 col-sm-12">
+                <h4>SPINNING</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/V20a2EGLVBQ" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+            <aside class="col-md-6 col-sm-12">
+                <h4>BOXEO</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/i_LHzvxH-Pk" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+            <aside class="col-md-6 col-sm-12">
+                <h4>G.A.P</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/z67ey1vTQ48" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+            <aside class="col-md-6 col-sm-12">
+                <h4>ZUMBA</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/r09zk5mp_Nk" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+            <aside class="col-md-6 col-sm-12">
+                <h4>PILATES</h4>
+                <iframe class="video-act" src="https://www.youtube.com/embed/xlRHaxIv7FE" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </aside>
+        </div>
+    </section>
 
 
-        <footer>
-            <div class="redes">
-                <a href="https://www.facebook.com/Altreno.point/"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/altreno.point/"><i class="fa-brands fa-instagram"></i>
-                </a>
-            </div>
-            <p class="redes">Todos los derechos son reservados por copyright</p>
-        </footer>
+    <footer>
+        <div class="redes">
+            <a href="https://www.facebook.com/Altreno.point/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/altreno.point/"><i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
+        <p class="redes">Todos los derechos son reservados por copyright</p>
+    </footer>
 
     <!-- SEPARATE BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -102,6 +120,7 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
     </script>
     <!-- FIN SEPARATE BOOTSTRAP -->
-        
+
 </body>
+
 </html>
