--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,20 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png">
 </head>
+
 <body>
     <video src="./Video/Altrenovideo.mp4" class="foo" autoplay="true" muted="true" loop="true"></video>
 
-<h1><strong> ALTRENO <br> POINT</strong></h1>
+    <h1><strong> ALTRENO <br> POINT</strong></h1>
 
-<section class="botones" >
-    <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png" class="boton"></a>
-    <a href="./nosotros.html"><img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" id="altrenoico"></a>
-    <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png" class="boton"></a>
-</section>
+    <section class="botones">
+        <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png"
+                class="boton"></a>
+        <a href="./nosotros.html"><img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" id="altrenoico"></a>
+        <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png"
+                class="boton"></a>
+    </section>
 
 </body>
+
 </html>
