--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
 <body>
     <!-- NAVEGACION INICIO -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">
                 <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
             </a>
