--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <h1><strong> ALTRENO <br> POINT</strong></h1>
 
     <section class="botones">
-        <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png"
-                class="boton"></a>
+        <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png"class="boton"></a>
         <a href="./nosotros.html"><img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" id="altrenoico"></a>
-        <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png"
-                class="boton"></a>
+        <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png"class="boton"></a>
     </section>
 
 </body>
