--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
 <body>
     <!-- NAVEGACION INICIO -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">
                 <img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" alt="Logo" style="width:50px;">
             </a>
@@ -59,14 +59,13 @@
             </div>
         </nav>
     </header>
+    <!-- NAVEGACION FIN -->
     <main>
         <!-- INICIO SITIO -->
         <section class="cont1" id="ancla0">
             <div class="item1">
-                <p class="texto1"><strong>DESARROLLA TU POTENCIAL </strong>
-                    <p class="texto2"> Comenzá a buscar tu mejor
-                        versión</p> <br>
-                    <a href="./contacto.html" class="boton2">INSCRÍBETE</a>
+                <p class="texto1"><strong>DESARROLLA TU POTENCIAL </strong><span class="texto2"> <br> Comenzá a buscar tu mejor versión </span></p> <br>
+                <a href="./contacto.html" class="boton2">INSCRÍBETE</a>
             </div>
         </section>
         <!-- FIN INICIO SITIO -->
