--- a/natacion.html
+++ b/natacion.html
@@ -50,13 +50,21 @@
         </nav>
     </header>
     <!-- NAVECACION FIN -->
-    <!-- INICIO GALERIA GRID -->
+    <section class="cont11">
+    <div class="info info--nueva">
+        <p class="texto11">PROXIMAMENTE</p>
+    </div>
+    <div class="info--nueva">
+    <p class="texto12"> GALERIA <span> INFORMATIVA</span> ALTRENO-<span>SWIM</span> </p>
+    </div>
+    </section>
+<!-- INICIO GALERIA GRID -->
     <div class="altrenoswim">
         <div class="foto1 foto"></div>
         <div class="foto2 foto"></div>
         <div class="foto3 foto"></div>
         <div class="foto4 foto"></div>
-        <div class="foto5 foto"></div>
+        <div class="foto5 foto"></div>  
         <div class="foto6 foto"></div>
         <div class="foto7 foto"></div>
         <div class="foto8 foto"></div>
