--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-sacalable=no, initial-scale=1, minimun-scale1">
+    <meta name="description" content="Gimnasio y Natatorio Altreno en Moron. Disfruta de nuestro centro de entrenamiento con rutinas y clases acordes a tus necesidades y objetivos.">
+    <meta name="keywords" content="gimnasio, musculacion, entrenamiento, natacion, natatorio, pielta, fuerza, funcional, gap, spinning, clases, rutinas personalizadas, powerlifting, bodybuilding, culturismo, competencia, zumba, boxeo, deporte, deportistas, fitness, aqua gym, equipos, matronatacion, ambientacion, nadar, aprende">
     <title>Altreno Point</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png">
+
 </head>
 
 <body>
