--- a/actividades.html
+++ b/actividades.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Actividades salon Altreno Point. Proba tu primer clase de Fitness y comenza a lograr tus objetivos divirtiendote.">
+    <meta name="keywords" content="gimnasio, musculacion, entrenamiento, natacion, natatorio, pielta, fuerza, funcional, gap, spinning, clases, rutinas personalizadas, powerlifting, bodybuilding, culturismo, competencia, zumba, boxeo, deporte, deportistas, fitness, aqua gym, matronatacion, nadar">
     <!-- LINK BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
