--- a/actividades.html
+++ b/actividades.html
@@ -58,42 +58,42 @@
         <div class="conteiner-fluid item6">
             <aside class="col-md-6 col-sm-12">
                 <h4>FUNCIONAL</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/eYU6z5cydv0" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/eYU6z5cydv0" title="Video funcional"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </aside>
             <aside class="col-md-6 col-sm-12">
                 <h4>SPINNING</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/V20a2EGLVBQ" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/V20a2EGLVBQ" title="Video spinning"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </aside>
             <aside class="col-md-6 col-sm-12">
                 <h4>BOXEO</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/i_LHzvxH-Pk" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/i_LHzvxH-Pk" title="Video boxeo"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </aside>
             <aside class="col-md-6 col-sm-12">
                 <h4>G.A.P</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/z67ey1vTQ48" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/z67ey1vTQ48" title="Video gap"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </aside>
             <aside class="col-md-6 col-sm-12">
                 <h4>ZUMBA</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/r09zk5mp_Nk" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/r09zk5mp_Nk" title="video zumba"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </aside>
             <aside class="col-md-6 col-sm-12">
                 <h4>PILATES</h4>
-                <iframe class="video-act" src="https://www.youtube.com/embed/xlRHaxIv7FE" title="YouTube video player"
+                <iframe class="video-act" src="https://www.youtube.com/embed/xlRHaxIv7FE" title="video pilates"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
