--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-    <video src="./Video/Altrenovideo.mp4" class="foo" autoplay="true" muted="true" loop="true"></video>
+    <video src="./Video/Altrenovideo.mp4" class="foo" autoplay="true" muted="true" loop="true" alt="video gimnasio fondo"></video>
 
     <h1><strong> ALTRENO <br> POINT</strong></h1>
 
     <section class="botones">
-        <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png"class="boton"></a>
-        <a href="./nosotros.html"><img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" id="altrenoico"></a>
-        <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png"class="boton"></a>
+        <a href="https://www.facebook.com/Altreno.point/"><img src="./icoaltreno/facebook-6062236_640.png"class="boton" alt="Boton Facebook"></a>
+        <a href="./nosotros.html"><img src="./icoaltreno/HW8uSgQTymbusj3SwtXg_x5jtAC4F7H4k05cj.png" id="altrenoico" alt="Boton Pagina principal"></a>
+        <a href="https://www.instagram.com/altreno.point/"><img src="./icoaltreno/instagram-6062238_640.png"class="boton" alt="Boton Instagram"></a>
     </section>
 
 </body>
