--- a/natacion.html
+++ b/natacion.html
@@ -62,14 +62,14 @@
     </section>
 <!-- INICIO GALERIA GRID -->
     <div class="altrenoswim">
-        <div class="foto1 foto"></div>
-        <div class="foto2 foto"></div>
-        <div class="foto3 foto"></div>
-        <div class="foto4 foto"></div>
-        <div class="foto5 foto"></div>  
-        <div class="foto6 foto"></div>
-        <div class="foto7 foto"></div>
-        <div class="foto8 foto"></div>
+        <div class="foto1 foto" alt="foto galeria natacion 1"></div>
+        <div class="foto2 foto" alt="foto galeria natacion 2"></div>
+        <div class="foto3 foto" alt="foto galeria natacion 3"></div>
+        <div class="foto4 foto" alt="foto galeria natacion 4"></div>
+        <div class="foto5 foto" alt="foto galeria natacion 5"></div>  
+        <div class="foto6 foto" alt="foto galeria natacion 6"></div>
+        <div class="foto7 foto" alt="foto galeria natacion 7"></div>
+        <div class="foto8 foto" alt="foto galeria natacion 8"></div>
     </div>
     <!-- FIN GALERIA GRID -->
     <footer>
