--- a/nosotros.html
+++ b/nosotros.html
@@ -152,9 +152,9 @@
                 <a href="./actividades.html" class="boton5"> ¡ver más! </a></p>
             </div>
             <div style="text-align:center" class="video__propuesta">
-                <video src="./Video/zumba.mp4" autoplay="true" loop="true" muted="true"></video>
-                <video src="./Video/funcional.mp4" autoplay="true" loop="true" muted="true"></video>
-                <video src="./Video/gap.mp4" autoplay="true" loop="true" muted="true"></video>
+                <video src="./Video/zumba.mp4" autoplay="true" loop="true" muted="true" alt="clase zumba" ></video>
+                <video src="./Video/funcional.mp4" autoplay="true" loop="true" muted="true" alt="clase funcional" ></video>
+                <video src="./Video/gap.mp4" autoplay="true" loop="true" muted="true" alt="clase gap" ></video>
             </div>
         </section>
         <!-- FIN NUESTRA PROPUESTA -->
@@ -184,22 +184,22 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./imgaltreno/METODO1.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO1.png" class="d-block w-100" alt="Metodo Entrenamiento 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgaltreno/METODO2.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO2.png" class="d-block w-100" alt="Metodo Entrenamiento 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgaltreno/METODO3.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO3.png" class="d-block w-100" alt="Metodo Entrenamiento 3">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgaltreno/METODO4.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO4.png" class="d-block w-100" alt="Metodo Entrenamiento 4">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgaltreno/METODO5.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO5.png" class="d-block w-100" alt="Metodo Entrenamiento 5">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgaltreno/METODO6.png" class="d-block w-100" alt="...">
+                            <img src="./imgaltreno/METODO6.png" class="d-block w-100" alt="Metodo Entrenamiento 6">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
