--- a/nosotros.html
+++ b/nosotros.html
@@ -163,7 +163,7 @@
         <h2 class="sec3" id="ancla3">ALTRENO SWIM</h2>
         <section class="cont7">
             <div class="item7">
-                <p class="texto2 natacion">ESTAMOS TRABAJANDO PARA BRINDARTE EL MEJOR NATATORIO DE ZONA OESTE</p>
+                <p class="texto2 natacion">YA PODES SER PARTE DEL MEJOR NATATORIO DE ZONA OESTE <br> ¡COMENZA AHORA! </p>
                 <a href="./natacion.html" class="logo2">ALTRENO <span>SWIM</span></a>
             </div>
         </section>
