--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
                     <input type="date" name="nacimiento" class="input-l" required><br>
                     <input type="number" name="telefono" class="input-l" placeholder="Telefono" required><br>
                     <input type="text" name="correo" placeholder="Correo" class="input-l" required> <br>
-                    <textarea name="mensaje" class="input-txt" rows="6" placeholder="Solicite informacion sobre actividades y promociones" required></textarea><br>
+                    <textarea name="mensaje" class="input-txt" rows="6" placeholder="Solicitá información sobre los planes y promociones" required></textarea><br>
                     <input type="submit" value="enviar" id="btn-send">
                 </form>
         </div>
