--- a/natacion.html
+++ b/natacion.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Natatorio Altreno Swim en Moron. Proximamente, clases de natacion para personas de todos los niveles y edades.">
-    <meta name="keywords" content="entrenamiento, natacion, natatorio, pielta, competencia, deporte, deportistas, fitness, aqua gym, equipos, matronatacion, ambientacion, nadar, aprende">
+    <meta name="description"
+        content="Natatorio Altreno Swim en Moron. Proximamente, clases de natacion para personas de todos los niveles y edades.">
+    <meta name="keywords"
+        content="entrenamiento, natacion, natatorio, pielta, competencia, deporte, deportistas, fitness, aqua gym, equipos, matronatacion, ambientacion, nadar, aprende">
     <!-- LINK BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -52,24 +54,131 @@
         </nav>
     </header>
     <!-- NAVECACION FIN -->
+    <h2 class="sec3" id="ancla2">GRILLA HORARIA</h2>
     <section class="cont11">
-    <div class="info info--nueva">
-        <p class="texto11">PROXIMAMENTE</p>
-    </div>
-    <div class="info--nueva">
-    <p class="texto12"> GALERIA <span> INFORMATIVA</span> ALTRENO-<span>SWIM</span> </p>
-    </div>
+        <table class="horarios">
+            <tr>
+                <th class="hora">Horario</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <td class="hora-columna">8:30 - 09:30</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Aqua <br> Jubilados</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Aqua <br> Jubilados</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">09:30 - 10:30</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Aqua <br> Jubilados</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Aqua <br> Jubilados</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">10:30 - 16:00</td>
+                <td class="clase-celda">P Libre</td>
+                <td class="clase-celda">P Libre</td>
+                <td class="clase-celda">P Libre</td>
+                <td class="clase-celda">P Libre</td>
+                <td class="clase-celda">P Libre</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">16:00 - 17:00</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Acúatica</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Acúatica</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">17:00 - 18:00</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">18:00 - 19:00</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+                <td class="clase-celda">Inicial <br> Infantil</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">19:00 - 20:00</td>
+                <td class="clase-celda">Adultos <br> Adolecentes</td>
+                <td class="clase-celda">Acúatica</td>
+                <td class="clase-celda">Adultos <br> Adolecentes</td>
+                <td class="clase-celda">Acúatica</td>
+                <td class="clase-celda">Adultos <br> Adolecentes</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">20:00 - 21:00</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">21:00 - 22:00</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+        </table>
+        <br>
+        <table class="sabados">
+            <tr>
+                <th class="hora">Horario</th>
+                <th>Sabados</th>
+            </tr>
+            <tr>
+                <td class="hora-columna">09:00 - 10:00</td>
+                <td class="clase-celda">Adultos</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">10:00 - 11:00</td>
+                <td class="clase-celda">Bebes</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">11:00 - 11:50</td>
+                <td class="clase-celda">Inicial</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">11:00 - 12:00</td>
+                <td class="clase-celda">Infantil</td>
+            </tr>
+            <tr>
+                <td class="hora-columna">12:00 - 13:00</td>
+                <td class="clase-celda">P Libre</td>
+            </tr>
+        </table>
+        
     </section>
-<!-- INICIO GALERIA GRID -->
+    <!-- INICIO GALERIA GRID -->
+    <h2 class="sec3">GALERIA NOTICIAS</h2>
     <div class="altrenoswim">
-        <div class="foto1 foto" alt="foto galeria natacion 1"></div>
-        <div class="foto2 foto" alt="foto galeria natacion 2"></div>
-        <div class="foto3 foto" alt="foto galeria natacion 3"></div>
-        <div class="foto4 foto" alt="foto galeria natacion 4"></div>
-        <div class="foto5 foto" alt="foto galeria natacion 5"></div>  
-        <div class="foto6 foto" alt="foto galeria natacion 6"></div>
-        <div class="foto7 foto" alt="foto galeria natacion 7"></div>
-        <div class="foto8 foto" alt="foto galeria natacion 8"></div>
+        <a class="foto1 foto" href="https://www.instagram.com/p/CsbrvfUgALu/" alt="foto galeria natacion 1"></a>
+        <a class="foto2 foto" href="https://www.instagram.com/p/CsR-x2BMfm1/" alt="foto galeria natacion 2"></a>
+        <a class="foto3 foto" href="https://www.instagram.com/p/CtZaNZYALi1/" alt="foto galeria natacion 3"></a>
+        <a class="foto4 foto" href="https://www.instagram.com/p/CtKrIVFsILy/" alt="foto galeria natacion 4"></a>
+        <a class="foto5 foto" href="https://www.instagram.com/p/CsWLlqoMPqM/" alt="foto galeria natacion 5"></a>
+        <a class="foto6 foto" href="https://www.instagram.com/p/Cs4JZ7sAKqg" alt="foto galeria natacion 6"></a>
+        <a class="foto7 foto" href="https://www.instagram.com/p/Cs4JKdfAhHz/" alt="foto galeria natacion 7"></a>
+        <a class="foto8 foto" href="https://www.instagram.com/p/CtKrVh8sUZH/" alt="foto galeria natacion 8"></a>
+        <a class="foto9 foto" href="https://www.instagram.com/p/CtOmOCkgyNM/" alt="foto galeria natacion 9"></a>
     </div>
     <!-- FIN GALERIA GRID -->
     <footer>
