--- a/nosotros.html
+++ b/nosotros.html
@@ -78,20 +78,17 @@
         <section class="cont2">
             <section class="cont2 cont_planes">
                 <article class="planes--oro">
-                    <h3 class="planes__titulo"> ORO </h3>
-                    <div class="planes__precio"> 6000$ </div>
+                    <h3 class="planes__titulo"> PLAN ORO <br> PILETA + GIMNASIO </h3>
                     <div class="planes__imagen--oro"></div>
                     <ul class="planes__descripcion">
-                        <li>MUSCULACION LIBRE</li>
+                        <li>ALTRENO GYM LIBRE</li>
+                        <li>ACCESO ALTRENO SWIM</li>
                         <li>ACCESO A BAR SALUDABLE</li>
                         <li>TIENDA DE ROPA HUMMEL</li>
                         <li>ATENCION PERSONALIZADA</li>
+                        <li>FITNESS</li>
                         <li>FUNCIONAL</li>
-                        <li>ZUMBA</li>
-                        <li>GAP</li>
                         <li>SPINNING</li>
-                        <li>BOXEO</li>
-                        <li>NATACION (PROXIMAMENTE)</li>
                     </ul>
                     <div class="planes__boton--oro">
                         <a href="https://api.whatsapp.com/message/ZS7AUHRGTCAIG1?autoload=1&app_absent=0"
@@ -101,15 +98,14 @@
                 </article>
 
                 <article class="planes--plata">
-                    <h3 class="planes__titulo"> PLATA </h3>
-                    <div class="planes__precio"> 5000$ </div>
+                    <h3 class="planes__titulo"> PLAN PLATA <br> GIMNASIO FULL </h3>
                     <div class="planes__imagen--plata"></div>
                     <ul class="planes__descripcion">
                         <li>MUSCULACION LIBRE</li>
                         <li>ACCESO A BAR SALUDABLE</li>
                         <li>TIENDA DE ROPA HUMMEL</li>
                         <li>ATENCION PERSONALIZADA</li>
-                        <li>ACCESO A 1 ACTIVIDAD ADICIONAL</li>
+                        <li>FITNESS</li>
                     </ul>
                     <div class="planes__boton--plata">
                         <a href="https://api.whatsapp.com/message/ZS7AUHRGTCAIG1?autoload=1&app_absent=0"
@@ -121,11 +117,10 @@
                 </article>
 
                 <article class="planes--bronce">
-                    <h3 class="planes__titulo"> BRONCE </h3>
-                    <div class="planes__precio"> 4500$ </div>
+                    <h3 class="planes__titulo">PLAN BRONCE <br> FITNESS </h3>
                     <div class="planes__imagen--bronce"></div>
                     <ul class="planes__descripcion">
-                        <li>MUSCULACION LIBRE</li>
+                        <li>ACCESO A CLASES 2/3 VECES POR SEMANA</li>
                         <li>ATENCION PERSONALIZADA</li>
                         <li>ACCESO A BAR SALUDABLE</li>
                         <li>TIENDA DE ROPA HUMMEL</li>
